--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -5,38 +5,10 @@ on:
   push:
     branches: ["main"]
 
-permissions:
-  contents: read
-
 jobs:
   terraform:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Terraform Format (check)
-        run: terraform fmt -check -recursive
-
-      - name: Terraform Init (no backend)
-        run: terraform init -backend=false
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Setup TFLint
-        uses: terraform-linters/setup-tflint@v4
-        with:
-          tflint_version: v0.52.0
-
-      - name: TFLint Init
-        run: tflint --init
-
-      - name: TFLint
-        run: tflint
+    uses: ocean-projects/aws-scripts/.github/workflows/terraform-ci-reusable.yml@main
+    with:
+      working_directory: "."
+      terraform_version: "1.6.6"
+      tflint_version: "v0.52.0"
